--- a/src/styles/Gallery.scss
+++ b/src/styles/Gallery.scss
@@ -1,11 +1,12 @@
 //Layout
 .Kasa_Gallery{
     display:flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     width: 1240px;
-    height: 829px;
+    height: auto;
     flex-shrink: 0;
     border-radius: 25px;
     background: #F6F6F6;
     padding-top: 56px;
-    padding-left: 50px;
 }
