:recycle: (Kasa_Project) Réorganisation du code avec la mise en place des routes pour la page Home et Propos

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,11 +1,10 @@
 //Layout
 .Kasa_Header{
     display: flex;
+    justify-content: space-between;
     width: 1240px;
     height: 68px;
-    justify-content: center;
-    align-items: center;
-    gap: 720.678px;
+    margin : 50px 100px 0px 100px;
 }
 //Logo
 .Kasa_Logo{
