:sparkles: (src/styles/Normalize.scss) Ajout d'un fichier Normalize.scss

--- a/src/styles/Thumb.scss
+++ b/src/styles/Thumb.scss
@@ -34,8 +34,8 @@
     width: 300px;
     color: #FFF;
     margin-inline-start: 20px;
-    margin-block-start: 0px;
-    margin-block-end: 20px;
+    //margin-block-start: 0px;
+    //margin-block-end: 20px;
     font-family: Montserrat;
     font-size: 18px;
     font-style: normal;
