--- a/src/styles/DropDown.scss
+++ b/src/styles/DropDown.scss
@@ -9,7 +9,19 @@
     height: 47px;
     background: #FF6060;
     color: white;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
     border-radius: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding: 7px 20px;
-  }
+}
+.DropDown_Text{
+    color: #FF6060;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
