:sparkles: (src/Logement) Ajout du dossier Logement et de ses fichier Gallery, Logement, MainContent pour préparer la page Logement

--- a/src/styles/Gallery.scss
+++ b/src/styles/Gallery.scss
@@ -2,7 +2,7 @@
 .Kasa_Gallery{
     display:flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    gap: 40px 45px;
     width: 1240px;
     height: auto;
     flex-shrink: 0;
