--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -15,5 +15,6 @@
     font-style: normal;
     font-weight: 500;
     line-height: 34.224px;
+    text-decoration: none;
     //text-decoration-line: underline;
 }
