--- a/src/styles/DropDown.scss
+++ b/src/styles/DropDown.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 1023px;
+    width: auto;
     height: 47px;
     background: #FF6060;
     color: white;
@@ -24,4 +24,9 @@
     font-style: normal;
     font-weight: 400;
     margin-bottom: 30px;
+}
+.MainContent_DropDown{
+    display: flex;
+    gap: 50px;
+    width: 1400px;
 }
