--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -1,8 +1,7 @@
 //Layout
 .Kasa_Nav{
     display: flex;
-    width: 309px;
-    height: 34px;
+    justify-content: flex-end;
     flex-shrink: 0;
 }
 //Texte
