--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,15 +1,12 @@
-//Layout
-.Kasa_Header{
+.Kasa_Header {
     display: flex;
     justify-content: space-between;
-    width: 1240px;
-    height: 68px;
-    margin : 50px 100px 0px 100px;
-}
-//Logo
-.Kasa_Logo{
-    width: 210.322px;
-    height: 68px;
-    flex-shrink: 0;
-    color:#FF6060;
+    align-items: center;
+    width: 90%;
+    max-width: 1200px; 
+    margin : 20px auto;
+    .Kasa_Logo {
+        width: 25%;
+        height: auto;
+    }
 }
