--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,20 +1,20 @@
 .Kasa_Footer{
     display: flex;
-    padding: 66px 464px 29px 463px;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    gap: 28.556px;
+    max-width: 1400px;
     background-color: #000000;
+    padding: 30px 0;
+    margin: 0 auto;
+    gap: 28.556px;
 }
 .Kasa_Logo{
-    width: 122px;
-    height: 39.444px;
+    width: 12%;
 }
 .Footer_Text{
     display: flex;
-    width: 513px;
-    height: 46px;
+    width: 100%;
     flex-direction: column;
     justify-content: flex-end;
     color: #FFF;
@@ -23,5 +23,5 @@
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
-    line-height: 142.6%; /* 34.224px */
+    line-height: 142.6%;
 }
