--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,6 +1,6 @@
 .Kasa_Home {
     display: flex;
-    width: 1440px;
+    max-width: 1200px;
     padding: 40px 100px 0px 100px;
     flex-direction: column;
     justify-content: flex-end;
