--- a/src/styles/DropDown.scss
+++ b/src/styles/DropDown.scss
@@ -3,59 +3,31 @@
     justify-content: space-between;
     width: 90%;
     margin: 20px auto;
-    .DropDown_Item {
-        width: 45%;
-        .DropDown_Title {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: #FF6060;
-            border-radius: 5px;
-            color: #fff;
-            padding: 7px 20px;
-        }
-        .DropDown_Text {
-            background-color: #F6F6F6;
-            border-radius: 0 0 5px 5px;
-            padding: 10px;
-            line-height: 1.5;
-        }
-        .DropDown_List {
-            background-color: #F6F6F6;
-            border-radius: 0 0 5px 5px;
-            padding: 10px;
-        }
+}
+.MainContent_DropDown_List{
+    width: 90%;
+    margin: 20px auto;
+}
+.DropDown_Item {
+    width: 45%;
+    .DropDown_Title {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #FF6060;
+        border-radius: 5px;
+        color: #fff;
+        padding: 7px 20px;
+    }
+    .DropDown_Text {
+        background-color: #F6F6F6;
+        border-radius: 0 0 5px 5px;
+        padding: 10px;
+        line-height: 1.5;
+    }
+    .DropDown_List {
+        background-color: #F6F6F6;
+        border-radius: 0 0 5px 5px;
+        padding: 10px;
     }
 }
-/*.DropDown_List{
-    width: 1023px;
-}
-.DropDown_Title{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: auto;
-    height: 47px;
-    background: #FF6060;
-    color: white;
-    font-family: Montserrat;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    border-radius: 5px;
-    margin-bottom: 30px;
-    padding: 7px 20px;
-}
-.DropDown_Text{
-    color: #FF6060;
-    font-family: Montserrat;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    margin-bottom: 30px;
-}
-.MainContent_DropDown{
-    display: flex;
-    gap: 50px;
-    width: 1400px;
-}*/
