:recycle::lipstick: (src/Propos/Propos.scss) Création d'un fichier scss pour gérer le style de la page a Propos

--- a/src/styles/DropDown.scss
+++ b/src/styles/DropDown.scss
@@ -6,28 +6,32 @@
 }
 .MainContent_DropDown_List{
     width: 90%;
-    margin: 20px auto;
+    margin: 30px auto;
 }
-.DropDown_Item {
+.DropDown_Item_Logement {
     width: 45%;
-    .DropDown_Title {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-color: #FF6060;
-        border-radius: 5px;
-        color: #fff;
-        padding: 7px 20px;
-    }
-    .DropDown_Text {
-        background-color: #F6F6F6;
-        border-radius: 0 0 5px 5px;
-        padding: 10px;
-        line-height: 1.5;
-    }
-    .DropDown_List {
-        background-color: #F6F6F6;
-        border-radius: 0 0 5px 5px;
-        padding: 10px;
-    }
 }
+.DropDown_Item_Propos{
+    margin: 20px 0;
+}
+.DropDown_Title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #FF6060;
+    border-radius: 5px;
+    color: #fff;
+    padding: 7px 20px;
+}
+.DropDown_Text {
+    background-color: #F6F6F6;
+    border-radius: 0 0 5px 5px;
+    padding: 10px;
+    line-height: 1.5;
+}
+.DropDown_List {
+    background-color: #F6F6F6;
+    border-radius: 0 0 5px 5px;
+    padding: 10px;
+}
+
