--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,10 +1,11 @@
 .Kasa_Home {
-    display: flex;
-    max-width: 1200px;
-    padding: 40px 100px 0px 100px;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    gap: 63px;
+    max-width: 1400px;
+    width: 90%;
+    font-family: Montserrat;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FF6060;
+    margin: auto;
+
 }
 
