--- a/src/pages/Componants/Footer/Footer.scss
+++ b/src/pages/Componants/Footer/Footer.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    max-width: 1400px;
+    max-width: $desktop-max-width;
     background-color: #000000;
     padding: 30px 0;
     margin: 0 auto;
