--- a/src/pages/Componants/SectionImg/SectionImg.scss
+++ b/src/pages/Componants/SectionImg/SectionImg.scss
@@ -1,21 +1,56 @@
-.Kasa_Section_Img {
+@import '../../../styles/Variables';
+
+// Desktop
+.SectionImg {
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
     margin: 50px auto;
-    .Section_Img {
+    .SectionImg_Img {
         width: 100%;
+        height: 223px;
         border-radius: 25px;
+        object-fit: cover;
         filter: brightness(60%);
     }
     .Home_SectionImg_Text {
         position: absolute;
-        color: #FFF;
+        color: $secondary-color;
         font-size: 48px;
         font-weight: 500;
         line-height: 68.45px;
         text-align: left;
-
     }
+}
+
+// Mobile
+@media only screen and (max-width: $mobile-max-width) {
+    // Page Home
+    .Kasa_Home {
+        .SectionImg {
+            max-width: $mobile-max-width; 
+            margin: 0;
+            .SectionImg_Img {
+                height: 111px;
+                border-radius: 10px;
+            }
+            .Home_SectionImg_Text {
+                width: 60%;
+                left: 5%;
+                font-size: 24px;
+                line-height: 24px;
+            }
+        } 
+    }
+    // Page Propos
+    .Kasa_Propos {
+        .SectionImg {
+            max-width: $mobile-max-width; 
+            margin: 0;
+            .SectionImg_Img {
+                border-radius: 10px;
+            }
+        } 
+    } 
 }
