--- a/src/styles/_Variables.scss
+++ b/src/styles/_Variables.scss
@@ -1,6 +1,8 @@
 // Variables couleurs
 $primary-color: #FF6060;
 $secondary-color: #ffffff;
+$background-color: #F6F6F6;
+$footer-color: #000000;
 
 // BreakPoint
 $desktop-max-width:1400px;
