--- a/src/pages/Componants/Footer/Footer.scss
+++ b/src/pages/Componants/Footer/Footer.scss
@@ -7,7 +7,7 @@
     justify-content: flex-end;
     align-items: center;
     max-width: $desktop-max-width;
-    background-color: #000000;
+    background-color: $footer-color;
     padding: 30px 0;
     margin: 0 auto;
     gap: 28.556px;
