--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,28 +1,31 @@
-.Kasa_Home {
-    max-width: 1400px;
+@import '../../styles/Variables';
+
+// Desktop
+.Home {
+    max-width: $desktop-max-width;
     width: 90%;
     font-family: Montserrat;
     letter-spacing: 0em;
     text-align: left;
     line-height: 26px;
-    color: #FF6060;
+    color: $primary-color;
     margin: auto;
-    .Kasa_Gallery {
+    .Gallery {
         display:flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
         width: 100%;
         border-radius: 25px;
-        background: #F6F6F6;
+        background: $background-color;
         margin: 30px 0;
         padding-bottom: 3%;
-        .Kasa_Link_Logement {
+        .Gallery_Link {
             width: 30%;
             padding-top: 30%;
             position: relative;
             margin-top: 3%;
             .Gallery_Thumb {
-                .Gallery_Thumb_Img {
+                .Thumb_Img {
                     width: 100%;
                     height: 100%;
                     position: absolute;
@@ -31,7 +34,7 @@
                     object-fit: cover;
                     border-radius: 10px;
                 }
-                .Gallery_Thumb_Filter {
+                .Thumb_Filter {
                     position: absolute;
                     top: 0;
                     width: 100%;
@@ -39,11 +42,11 @@
                     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
                     border-radius: 10px;
                 }
-                .Gallery_Thumb_Txt {
+                .Thumb_Content {
                     position: absolute;
                     bottom: 5%;
                     width: 75%;
-                    color: #FFF;
+                    color: $secondary-color;
                     margin: 0 5%;
                 }
             }
@@ -51,3 +54,17 @@
     }
 }
 
+// Mobile
+@media only screen and (max-width: $mobile-max-width) {
+    .Home {
+        max-width: $mobile-max-width; 
+        .Gallery {
+            background: none;
+            .Gallery_Link {
+                width: 100%;
+                padding-top: 75%;
+                margin-top: 6%;
+            }
+        }
+    }
+}
