--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -10,6 +10,7 @@
     line-height: 26px;
     color: $primary-color;
     margin: auto;
+    flex: 1;
     .Gallery {
         display:flex;
         flex-wrap: wrap;
