--- a/src/pages/Componants/Footer/Footer.scss
+++ b/src/pages/Componants/Footer/Footer.scss
@@ -7,6 +7,7 @@
     justify-content: flex-end;
     align-items: center;
     max-width: $desktop-max-width;
+    width: 100%;
     background-color: $footer-color;
     padding: 30px 0;
     margin: 0 auto;
