--- a/src/pages/Error/Error.scss
+++ b/src/pages/Error/Error.scss
@@ -3,6 +3,7 @@
     text-align: center;
     letter-spacing: 0em;
     color: #FF6060;
+    flex: 1;
     .Error_Title {
         font-size: 288px;
         font-weight: 700;
