--- a/src/pages/Logement/Logement.scss
+++ b/src/pages/Logement/Logement.scss
@@ -1,25 +1,30 @@
-.Kasa_Logement {
-    max-width: 1400px;
+@import '../../styles/Variables';
+
+// Desktop
+.Logement {
+    max-width: $desktop-max-width;
+    width: 100%;
     font-family: Montserrat;
     letter-spacing: 0em;
     text-align: left;
-    color: #FF6060;
+    color: $primary-color;
     margin: auto;
+    flex: 1;
     .Logement_Title {
         display: flex;
         justify-content: space-between;
         width: 90%;
         margin: 20px auto;
-        .Logement_Title_Tag {
+        .Title_Tag {
             margin-bottom: 20px;
             max-width: 80%;
             .MainContent_Title {
                 margin-bottom: 20px;
-                .MainContent_Title_Title {
+                .Title_Title {
                     font-size: 36px;
                     font-weight: 500;
                     line-height: 51px;
-                    .MainContent_Title_Lieu {
+                    .Title_Lieu {
                         font-size: 18px;
                         font-weight: 500;
                         line-height: 26px;
@@ -33,15 +38,15 @@
                 line-height: 20px;
                 text-align: center;
                 gap: 10px;
-                .MainContent_TagList_Tag {
-                    background: #FF6060;
-                    color: #FFFFFF;
+                .TagList_Tag {
+                    background: $primary-color;
+                    color: $secondary-color;
                     border-radius: 10px;
                     padding: 2px 25px;
                 }
             }
         }
-        .Logement_Title_People {
+        .Title_People {
             display: flex;
             flex-direction: column;
             align-items: flex-end;
@@ -51,7 +56,7 @@
                 align-items: center;
                 width: min-content;
                 gap: 15px;
-                .MainContent_People_Name {
+                .People_Name {
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: flex-end;
@@ -60,7 +65,7 @@
                     line-height: 26px;
                     text-align: right;
                 }
-                .MainContent_People_Picture {
+                .People_Picture {
                     width: 64px;
                     height: 64px;
                     border-radius: 50%;
@@ -74,4 +79,77 @@
             }
         }
     }
+}
+
+// Mobile
+@media only screen and (max-width: $mobile-max-width) {
+    .Logement {
+        max-width: $mobile-max-width;
+        .Logement_Title {
+            flex-wrap: wrap;
+            margin: 10px auto;
+            .Title_Tag {
+                max-width: 100%;
+                width: 100%;
+                .MainContent_Title {
+                    .Title_Title {
+                        font-size: 18px;
+                        line-height: 31px;
+                        .Title_Lieu {
+                            font-size: 14px;
+                        }
+                    }
+                }
+                .MainContent_TagList {
+                    width: 100%;
+                    font-size: 10px;
+                    .TagList_Tag {
+                        padding: 2px 15px;
+                    }
+                }
+            }
+            .Title_People {
+                width: 100%;
+                flex-direction: row-reverse;
+                justify-content: space-between;
+                align-items: center;
+            }
+        }
+    }    
+}
+
+// Tablet
+@media only screen and (min-width: $tablet-min-width) and (max-width: $tablet-max-width) {
+    .Logement {
+        max-width: $tablet-max-width;
+        .Logement_Title {
+            flex-wrap: wrap;
+            margin: 10px auto;
+            .Title_Tag {
+                max-width: 100%;
+                width: 100%;
+                .MainContent_TagList {
+                    width: 100%;
+                }
+            }
+            .Title_People {
+                width: 100%;
+                flex-direction: row-reverse;
+                justify-content: space-between;
+                align-items: center;
+                .People_Name {
+                    .People_Picture {
+                        width: 80px;
+                        height: 80px;
+                    }
+                }
+            }
+            .MainContent_StarNote {
+                .StarNote_Star {
+                    width: 30px;
+                    padding: 5px;
+                }
+            }
+        }
+    }    
 }
