--- a/src/pages/Logement/Logement.scss
+++ b/src/pages/Logement/Logement.scss
@@ -24,11 +24,11 @@
                     font-size: 36px;
                     font-weight: 500;
                     line-height: 51px;
-                    .Title_Lieu {
-                        font-size: 18px;
-                        font-weight: 500;
-                        line-height: 26px;
-                    }
+                }
+                .Title_Lieu {
+                    font-size: 18px;
+                    font-weight: 500;
+                    line-height: 26px;
                 }
             }
             .MainContent_TagList {
@@ -94,17 +94,18 @@
                 .MainContent_Title {
                     .Title_Title {
                         font-size: 18px;
-                        line-height: 31px;
-                        .Title_Lieu {
-                            font-size: 14px;
-                        }
+                        line-height: 25px;
+                    }
+                    .Title_Lieu {
+                        font-size: 14px;
+                        line-height: 19px;
                     }
                 }
                 .MainContent_TagList {
                     width: 100%;
                     font-size: 10px;
                     .TagList_Tag {
-                        padding: 2px 15px;
+                        padding: 2px 10px;
                     }
                 }
             }
@@ -113,6 +114,17 @@
                 flex-direction: row-reverse;
                 justify-content: space-between;
                 align-items: center;
+                .MainContent_People {
+                    .People_Name {
+                        font-size: 12px;
+                        line-height: 17px;
+                    }
+                }
+            }
+            .MainContent_StarNote {
+                .StarNote_Star {
+                    width: 20px;
+                }
             }
         }
     }    
