:seedling::lipstick: (pages/Propos/Propos) Composant responsive desktop/mobile

--- a/src/pages/Componants/Header/Header.scss
+++ b/src/pages/Componants/Header/Header.scss
@@ -20,7 +20,7 @@
             width: 50%;
             color: $primary-color;
             text-align: right;
-            font-family: Montserrat;
+            font-family: $primary-font;
             font-size: 24px;
             font-style: normal;
             font-weight: 500;
