--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,7 +4,7 @@
 .Home {
     max-width: $desktop-max-width;
     width: 90%;
-    font-family: Montserrat;
+    font-family: $primary-font;
     letter-spacing: 0em;
     text-align: left;
     line-height: 26px;
