--- a/src/pages/Logement/Logement.scss
+++ b/src/pages/Logement/Logement.scss
@@ -4,7 +4,7 @@
 .Logement {
     max-width: $desktop-max-width;
     width: 100%;
-    font-family: Montserrat;
+    font-family: $primary-font;
     letter-spacing: 0em;
     text-align: left;
     color: $primary-color;
