--- a/src/pages/Componants/DropDown/DropDown.scss
+++ b/src/pages/Componants/DropDown/DropDown.scss
@@ -20,7 +20,7 @@
 
 // css page a Propos
 .DropDown_List{
-    width: 90%;
+    width: 80%;
     margin: 30px auto;
     .DropDown_Item_Propos{
         margin: 20px 0;
@@ -57,6 +57,11 @@
             margin-bottom: 5%;
         }
     }
+
+    // css page a Propos
+    .DropDown_List{
+        width: 100%;
+    }
 }
 
 // Tablet
@@ -68,5 +73,10 @@
             width: 100%;
             margin-bottom: 3%;
         }
+    }
+
+    // css page a Propos
+    .DropDown_List{
+        width: 90%;
     }
 }
