--- a/src/pages/Componants/Footer/Footer.scss
+++ b/src/pages/Componants/Footer/Footer.scss
@@ -22,7 +22,7 @@
         justify-content: flex-end;
         color: $secondary-color;
         text-align: center;
-        font-family: Montserrat;
+        font-family: $primary-font;
         font-size: 24px;
         font-style: normal;
         font-weight: 500;
