--- a/src/styles/_Variables.scss
+++ b/src/styles/_Variables.scss
@@ -10,3 +10,6 @@ $desktop-min-width:1200px;
 $tablet-max-width:1199px;
 $tablet-min-width:768px;
 $mobile-max-width:767px;
+
+// Font
+$primary-font: Montserrat;
