--- a/src/pages/Componants/DropDown/DropDown.scss
+++ b/src/pages/Componants/DropDown/DropDown.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/Variables';
+@import '../../../styles/Animations';
 
 // Desktop
 // css composant générique
@@ -10,12 +11,22 @@
     border-radius: 5px;
     color: $secondary-color;
     padding: 7px 20px;
+    &.open {
+        .Arrow {
+            animation: openArrow 0.7s ease forwards;
+        }
+    }
+    &.closed {
+        .Arrow {
+            animation: closeArrow 0.7s ease forwards;
+        }
+    }
 }
 .DropDown_Content {
     background-color: $background-color;
     border-radius: 0 0 5px 5px;
-    padding: 25px 15px;
     line-height: 1.5;
+    padding: 25px 15px;
 }
 
 // css page a Propos
