--- a/src/styles/_Animations.scss
+++ b/src/styles/_Animations.scss
@@ -14,3 +14,16 @@
     transform: rotate(0deg);
   }
 }
+
+@keyframes openDropDown {
+  0% {
+      max-height: 0;
+      visibility: hidden;
+      opacity: 0;
+  }
+  100% {
+      max-height: 500px;
+      visibility: visible;
+      opacity: 1;
+  }
+}
